Use a single SocketHttpClient. Refactor all usages in reactive and Níma.